# Black-Widow

./: .gitignore  README.md  pyproject.toml  requirements.txt
dataset/Packetbeat/: Packetbeat _ clean _ Grp12.csv  T1018_Packetbeat_clean_Gp17_Elton.csv  T1571_Packetbeat_clean_Gp17_SuanHong.csv
dataset/Pcap/: T1059-T1203-T1548-T1068-T1003-T1110-T1016-T1046-T1087-T1580-T1057-T1069-T1082-T1021-T1030-T1567-r1-eth0_raw_Gp03.pcap  T1059-T1203-T1548-T1068-T1003-T1110-T1016-T1046-T1087-T1580-T1057-T1069-T1082-T1021-T1030-T1567-r1-eth1_part02_raw_Gp03.pcap  T1059-T1203-T1548-T1068-T1003-T1110-T1016-T1046-T1087-T1580-T1057-T1069-T1082-T1021-T1030-T1567-r1-eth1_raw_Gp03.pcap  T1059-T1203-T1548-T1068-T1003-T1110-T1016-T1046-T1087-T1580-T1057-T1069-T1082-T1021-T1030-T1567-r1-eth2_part02_raw_Gp03.pcap  T1059-T1203-T1548-T1068-T1003-T1110-T1016-T1046-T1087-T1580-T1057-T1069-T1082-T1021-T1030-T1567-r1-eth2_raw_Gp03.pcap  T1059-T1203-T1548-T1068-T1003-T1110-T1016-T1046-T1087-T1580-T1057-T1069-T1082-T1021-T1030-T1567-r2-eth0_part02_raw_Gp03.pcap  T1059-T1203-T1548-T1068-T1003-T1110-T1016-T1046-T1087-T1580-T1057-T1069-T1082-T1021-T1030-T1567-r2-eth0_raw_Gp03.pcap  T1059-T1203-T1548-T1068-T1003-T1110-T1016-T1046-T1087-T1580-T1057-T1069-T1082-T1021-T1030-T1567-r2-eth1_part02_raw_Gp03.pcap  T1059-T1203-T1548-T1068-T1003-T1110-T1016-T1046-T1087-T1580-T1057-T1069-T1082-T1021-T1030-T1567-r2-eth1_raw_Gp03.pcap  T1059-T1203-T1548-T1068-T1003-T1110-T1016-T1046-T1087-T1580-T1057-T1069-T1082-T1021-T1030-T1567-r2-eth2_part02_raw_Gp03.pcap  tcpdump_raw_G25_DEVELOPER_1.pcap  (+16 more)
src/: app.py
(+23 files in other folders)
