[tool.poetry]
name = "coursework-2"
version = "0.1.0"
description = "ICT3204 Coursework 2 - Machine Learning"
authors = ["Aidil Irfan <voltzxp@gmail.com>", "Ryan Chew <2000507@sit.singaporetech.edu.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.23.4"
matplotlib = "3.6.0"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
PyQt6 = "6.1.0"
pyqtgraph = "^0.13.1"
seaborn = "^0.12.1"
category-encoders = "^2.5.1.post0"

[tool.poetry.group.dev.dependencies]
pyqt6-tools = "^6.1.0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
